# cabor

./: .gitignore  CABOR_LOG.txt  CMakeLists.txt  Dockerfile  README.md  bin  build.bat  build.sh  cabor.bat  cabor.sh  docker.sh  dummy.asm  pack_source.sh  submit.sh
.github/workflows/: actions.yml  linux.yml  windows.yml
cabor_test_programs/: hello_world.cc
ci/: bootsrap-ubuntu202204LTS.sh  bootstrap-macos12.sh  bootstrap-win2022.bat  build-ubuntu202204LTS.sh  ubuntu202204LTS.sh  win2022.bat  win2022.sh
scripts/: send_json_test.py
src/: CMakeLists.txt  cabor_defines.h  main.c
src/core/: cabortime.c  cabortime.h  hashmap.c  hashmap.h  memory.c  memory.h  mutex.c  mutex.h  stack.c  stack.h  vector.c  vector.h
src/debug/: cabor_debug.h
src/filesystem/: filesystem.c  filesystem.h
src/language/: assembler.c  assembler.h  codegen.c  codegen.h  compiler.c  compiler.h  ir.c  ir.h  parser.c  parser.h  preamble.h  tokenizer.c  tokenizer.h  type_checker.c  type_checker.h
src/logging/: logging.c  logging.h
src/network/: dummy.h  network.c  network.h
src/test/: registered_tests.c  registered_tests.h  test_framework.c  test_framework.h
src/test/core/: hashmap_test.c  hashmap_test.h  stack_test.c  stack_test.h  vector_test.c  vector_test.h
src/test/filesystem/: filesystem_tests.c  filesystem_tests.h
src/test/language/: codegen_test.c  codegen_test.h  ir_test.c  ir_test.h  parser_test.c  parser_test.h  tokenizer_test.c  tokenizer_test.h  type_checker_test.c  type_checker_test.h
src/test/language/tokenizer/: tokenizer_test.c  tokenizer_test.h
